chore: add db migration, tidy up project handlers, update apidoc
